cloud/k8s/backend/tetris/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  labels:
    app: tetris
    component: deployment
spec:
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
        component: workload
    spec:
      containers:
      - image: ghcr.io/jobscale/tetris
        name: tetris
        volumeMounts:
        - name: shared-log
          mountPath: /var/log/nginx
      - image: ghcr.io/jobscale/log-upload
        name: log-upload
        volumeMounts:
        - name: shared-log
          mountPath: /var/log/sidecar
      volumes:
      - name: shared-log
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
  labels:
    app: tetris
    component: service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tetris
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tetris
  labels:
    app: tetris
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "tetris.jsx.jp"
  - "tetris.x.jsx.jp"
  rules:
  - backendRefs:
    - name: tetris
      port: 80
